; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/net/openvswitch/extr_datapath.c_copy_action.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/net/openvswitch/extr_datapath.c_copy_action.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nlattr = type { i32 }
%struct.sw_flow_actions = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.nlattr*, %struct.sw_flow_actions**)* @copy_action to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @copy_action(%struct.nlattr* %0, %struct.sw_flow_actions** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.nlattr*, align 8
  %5 = alloca %struct.sw_flow_actions**, align 8
  %6 = alloca i32, align 4
  %7 = alloca %struct.nlattr*, align 8
  store %struct.nlattr* %0, %struct.nlattr** %4, align 8
  store %struct.sw_flow_actions** %1, %struct.sw_flow_actions*** %5, align 8
  %8 = load %struct.nlattr*, %struct.nlattr** %4, align 8
  %9 = getelementptr inbounds %struct.nlattr, %struct.nlattr* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = call i32 @NLA_ALIGN(i32 %10)
  store i32 %11, i32* %6, align 4
  %12 = load %struct.sw_flow_actions**, %struct.sw_flow_actions*** %5, align 8
  %13 = load %struct.nlattr*, %struct.nlattr** %4, align 8
  %14 = getelementptr inbounds %struct.nlattr, %struct.nlattr* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = call %struct.nlattr* @reserve_sfa_size(%struct.sw_flow_actions** %12, i32 %15)
  store %struct.nlattr* %16, %struct.nlattr** %7, align 8
  %17 = load %struct.nlattr*, %struct.nlattr** %7, align 8
  %18 = call i64 @IS_ERR(%struct.nlattr* %17)
  %19 = icmp ne i64 %18, 0
  br i1 %19, label %20, label %23

20:                                               ; preds = %2
  %21 = load %struct.nlattr*, %struct.nlattr** %7, align 8
  %22 = call i32 @PTR_ERR(%struct.nlattr* %21)
  store i32 %22, i32* %3, align 4
  br label %28

23:                                               ; preds = %2
  %24 = load %struct.nlattr*, %struct.nlattr** %7, align 8
  %25 = load %struct.nlattr*, %struct.nlattr** %4, align 8
  %26 = load i32, i32* %6, align 4
  %27 = call i32 @memcpy(%struct.nlattr* %24, %struct.nlattr* %25, i32 %26)
  store i32 0, i32* %3, align 4
  br label %28

28:                                               ; preds = %23, %20
  %29 = load i32, i32* %3, align 4
  ret i32 %29
}

declare dso_local i32 @NLA_ALIGN(i32) #1

declare dso_local %struct.nlattr* @reserve_sfa_size(%struct.sw_flow_actions**, i32) #1

declare dso_local i64 @IS_ERR(%struct.nlattr*) #1

declare dso_local i32 @PTR_ERR(%struct.nlattr*) #1

declare dso_local i32 @memcpy(%struct.nlattr*, %struct.nlattr*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
